Fix tooltips going out of window on mobile

--- a/packages/nota-components/css/nota-components.scss
+++ b/packages/nota-components/css/nota-components.scss
@@ -301,7 +301,7 @@ $sans-serif: "Helvetica", sans-serif;
     padding: 6px 10px;
     border-radius: 4px;
     box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
-    max-width: 600px;
+    max-width: min(90vw, 600px);
     width: max-content;
     z-index: 1000;
 
